Update 10.24 - still no success
After a day smashing the keys - still no success with rendering the recpies.  Will try again

--- a/recipes.html
+++ b/recipes.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https"//www.cbc.ca">BeerSmith Viewer OR CBC</a>
+          <a class="navbar-brand" href="https://www.cbc.ca">BeerSmith Viewer OR CBC</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -56,7 +56,7 @@
 
 
         <div id="recipes-list"></div>
-
+<p>test</p>
 
 
       </div>
